--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-USERNAME=E-COMMERCE
-PASSWORD=e4rJXHzcwX3yK1JG
-DB_URL=mongodb+srv://E-commerce:e4rJXHzcwX3yK1JG@cluster0.qgbub8i.mongodb.net/
+USERNAME=admin
+PASSWORD=adminsecret88200788
+DB_URL=mongodb+srv://admin:adminsecret88200788@cluster.wsyatqr.mongodb.net/
 ENV_MODE=development
 SECRET=FSFDS32472638
 PORT=3001
