--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-USERNAME=admin
-PASSWORD=adminsecret88200788
-DB_URL=mongodb+srv://admin:adminsecret88200788@cluster.wsyatqr.mongodb.net/themepen?retryWrites=true&w=majority
+USERNAME=Themepen-moderator
+PASSWORD=xY5amr13l8zj0hqu
+DB_URL=mongodb+srv://Themepen-moderator:xY5amr13l8zj0hqu@cluster0.nzcurqq.mongodb.net/themepen?retryWrites=true&w=majority
 ENV_MODE=development
 SECRET=FSFDS32472638
 PORT=3001
