--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "ndoe server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "author": "",
